--- a/website_v2/package.json
+++ b/website_v2/package.json
@@ -2,7 +2,7 @@
   "name": "Website v2",
   "version": "1.0.0",
   "description": "Version 2 of my engineering portfolio website",
-  "main": "index.js",
+  "main": "gulpfile.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
