Done w/ responsive design + menu.

--- a/website_v2/_data/about.yml
+++ b/website_v2/_data/about.yml
@@ -2,7 +2,7 @@
   end: Stephanie Yip
 
 - begin: I studied
-  end: Electrical and Computer Engineering
+  end: Computer Engineering
 
 - begin: I like
   end: Hardware and Software Integration, Embedded Devices, Internet of Things, Full Stack Development
