--- a/website_v2/package.json
+++ b/website_v2/package.json
@@ -24,6 +24,7 @@
     "browser-sync": "^2.24.4",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^5.0.0",
+    "gulp-concat": "^2.6.1",
     "gulp-cssnano": "^2.1.3",
     "gulp-imagemin": "^4.1.0",
     "gulp-sass": "^4.0.1",
