Minor text changes

--- a/website_v2/_data/about.yml
+++ b/website_v2/_data/about.yml
@@ -5,7 +5,7 @@
   end: Computer Engineering
 
 - begin: I like
-  end: Hardware and Software Integration, Embedded Devices, Internet of Things, Full Stack Development
+  end: Hardware and Software Integration, Full Stack Development, Embedded Devices, Internet of Things
 
 - begin: Long story short
-  end: I am a computer engineer interested in software that interacts with the physical world.
+  end: I am a computer engineer interested in software that has a positive impact on the world.
