More text changes. Final commit before adding photos.

--- a/website_v2/_data/about.yml
+++ b/website_v2/_data/about.yml
@@ -8,4 +8,4 @@
   end: Hardware and Software Integration, Full Stack Development, Embedded Devices, Internet of Things
 
 - begin: Long story short
-  end: I am a computer engineer interested in software that has a positive impact on the world.
+  end: I am a computer engineer interested in software that has a positive impact.
