--- a/website_v2/_data/resume_work.yml
+++ b/website_v2/_data/resume_work.yml
@@ -2,7 +2,7 @@
   dates: Aug 2017 - Present
   role: Software Engineer
   description:
-    - item: Performed regression and unit testing for Windows, Linux, and VxWOrks platforms
+    - item: Performed regression and unit testing for Windows, Linux, and VxWorks platforms
     # - item: Worked under Agile/ Scrum development methodology
 
 - org: Crane Aerospace and Electronics
