--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Website v2",
+  "name": "Website_v2",
   "version": "1.0.0",
   "description": "Version 2 of my engineering portfolio website",
   "main": "gulpfile.js",
@@ -22,7 +22,6 @@
   "homepage": "https://github.com/stephaniekyyip/stephaniekyyip.github.io#readme",
   "devDependencies": {
     "browser-sync": "^2.24.4",
-    "gulp": "^3.9.1",
     "gulp-autoprefixer": "^5.0.0",
     "gulp-concat": "^2.6.1",
     "gulp-cssnano": "^2.1.3",
@@ -31,6 +30,8 @@
     "gulp-uglify": "^3.0.0"
   },
   "dependencies": {
+    "gulp": "^3.9.1",
+    "npm": "^6.2.0",
     "pump": "^3.0.0"
   }
 }
