Added more photos + hover link

--- a/_data/photography.yml
+++ b/_data/photography.yml
@@ -1,6 +1,20 @@
 - img: gasworksKiteHill
+  alt: Kite Hill at Gasworks Park
 - img: discoveryParkGoldenHour
+  alt: Golden Hour at Discovery Park
+- img: greenLake
+  alt: Green Lake
+- img: gardenLamps
+  alt: Garden at dusk
 - img: tulipFestival
+  alt: Tulip Festival
 - img: seattleUSnow
+  alt: Snow at Seattle U
 - img: sailboat
+  alt: Sailboat on the Puget Sound
+- img: flowerBee
+  alt: Bee on a flower
+- img: arboretumBridgeFall
+  alt: Bridge at Washington Park Arboretum in the Fall
 - img: branches
+  alt: Tree branch in the winter
