--- a/_data/resume_work.yml
+++ b/_data/resume_work.yml
@@ -6,7 +6,7 @@
     # - item: Worked under Agile/ Scrum development methodology
 
 - org: Crane Aerospace and Electronics
-  dates: June - Sept. 2016
+  dates: June - Sept 2016
   role: Software Engineer Intern
   description:
     - item: >
