--- a/package.json
+++ b/package.json
@@ -21,17 +21,17 @@
   },
   "homepage": "https://github.com/stephaniekyyip/stephaniekyyip.github.io#readme",
   "devDependencies": {
-    "browser-sync": "^2.24.4",
+    "browser-sync": "^2.26.3",
+    "del": "^3.0.0",
     "gulp-autoprefixer": "^5.0.0",
     "gulp-concat": "^2.6.1",
     "gulp-cssnano": "^2.1.3",
-    "gulp-imagemin": "^4.1.0",
-    "gulp-sass": "^4.0.1",
-    "gulp-uglify": "^3.0.0"
+    "gulp-imagemin": "^5.0.3",
+    "gulp-sass": "^4.0.2",
+    "gulp-uglify": "^3.0.1"
   },
   "dependencies": {
-    "gulp": "^3.9.1",
-    "npm": "^6.2.0",
-    "pump": "^3.0.0"
+    "gulp": "^4.0.0",
+    "npm": "^6.4.1"
   }
 }
