--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "Website_v2",
+  "name": "WebsiteV3",
   "version": "1.0.0",
-  "description": "Version 2 of my engineering portfolio website",
+  "description": "Version 3 of my engineering portfolio website",
   "main": "gulpfile.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
