--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "gulp-cssnano": "^2.1.3",
     "gulp-imagemin": "^5.0.3",
     "gulp-sass": "^4.0.2",
-    "gulp-uglify": "^3.0.1"
+    "gulp-uglify": "^3.0.1",
+    "gulp-uglify-es": "^1.0.4"
   },
   "dependencies": {
     "gulp": "^4.0.0",
