--- a/_config.yml
+++ b/_config.yml
@@ -15,12 +15,11 @@
 # in the templates via {{ site.myvariable }}.
 
 name: Stephanie Yip
-title: Stephanie Yip
+title: Stephanie Yip | Computer Engineer
 description: >- # this means to ignore newlines until "baseurl:"
-  Website for Stephanie Yip, a computer/ software engineer.
-baseurl: "/" # the subpath of your site, e.g. /blog
-url: "https://stephaniekyyip.com" # the base hostname & protocol for your site, e.g. http://example.com
-email: stephaniekyyip@gmail.com
+  Website for Stephanie Yip, a computer engineer interested in software and learning new things.
+baseurl: "/"
+url: "http://localhost:4000"
 
 # Build settings
 markdown: kramdown
@@ -36,6 +35,8 @@ exclude:
  - Gemfile.lock
  - node_modules
  - package.json
+ - _pages/old_stuff/*
+ - _includes/old_stuff/*
 #   - vendor/bundle/
 #   - vendor/cache/
 #   - vendor/gems/
