--- a/_config_dev.yml
+++ b/_config_dev.yml
@@ -15,13 +15,11 @@
 # in the templates via {{ site.myvariable }}.
 
 name: Stephanie Yip
-title: Stephanie Yip
+title: Stephanie Yip | Computer Engineer
 description: >- # this means to ignore newlines until "baseurl:"
-  Website for Stephanie Yip, a computer/ software engineer.
+  Website for Stephanie Yip, a computer engineer interested in software and learning new things.
 baseurl: ""
 url: "http://localhost:4000"
-
-email: stephaniekyyip@gmail.com
 
 # Build settings
 markdown: kramdown
