--- a/_data/resume_work.yml
+++ b/_data/resume_work.yml
@@ -1,8 +1,8 @@
 - org: Boeing
-  dates: Aug 2017 - Present
+  dates: Aug 2017 - Aug 2018
   role: Software Engineer
   description:
-    - item: Performed regression and unit tests for C and C++ code used on various platforms
+    - item: Performed regression and unit tests for C and C++ software for various platforms
     # - item: Worked under Agile/ Scrum development methodology
 
 - org: Crane Aerospace and Electronics
@@ -10,8 +10,8 @@
   role: Software Engineer Intern
   description:
     - item: >
-        Independently contributed to the development of a proximity sensor using a new
-        ARM micro-controller that no one else at the company had used before
-    - item: Tested and verified signal processing results using MATLAB and an oscilloscope
+        Initiated development on the latest generation of a proximity sensor using a new
+        ARM micro-controller
+    #- item: Tested and verified signal processing results using MATLAB and an oscilloscope
     - item: >
         Modified embedded software in C to configure the micro-controller for signal processing
