Updated project pages + js files - Redesigned + edited text on project pages - Renamed .js files + concatenated all js files into one via Gulp - Updated 404 page design - Updated resume pdf - Added favicon - Redesigned projects section (changed location of details button) - Added smooth scrolling for the nav bar links + highlighting the title of the current section in the nav bar - Removed highlighting when user double-clicks on nav bar - Cleaned up sass files - Removed unnecessary files from previous version

--- a/_data/resume_work.yml
+++ b/_data/resume_work.yml
@@ -11,7 +11,7 @@
   description:
     - item: >
         Initiated development on the latest generation of a proximity sensor using a new
-        ARM micro-controller
+        ARM microcontroller
     #- item: Tested and verified signal processing results using MATLAB and an oscilloscope
     - item: >
-        Modified embedded software in C to configure the micro-controller for signal processing
+        Modified embedded software in C to configure the microcontroller for signal processing
