--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ title: Stephanie Yip
 description: >- # this means to ignore newlines until "baseurl:"
   Website for Stephanie Yip, a computer/ software engineer.
 baseurl: "/" # the subpath of your site, e.g. /blog
-url: "https://stephaniekyyip.com" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://stephaniekyyip.com/websiteV2" # the base hostname & protocol for your site, e.g. http://example.com
 email: stephaniekyyip@gmail.com
 
 # Build settings
